feat 0.2: Adicionando imagens no projeto

--- a/index.html
+++ b/index.html
@@ -21,20 +21,55 @@
                 <font size="5">Autor: Sir Arthur Conan Doyle</font>
             </p>
         </b>
+
+        <p>
+            <b>Objetivo:</b> Mostrar as resenhas dos principais livros de Sherlock Holmes.
+        </p>
+
+        <ul>
+            <li>
+                <img src="images/um-estudo-em-vermelho.jpg" alt="Capa do livro: Um Estudo em Vermelho de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>Um Estudo em Vermelho</b>
+                </font>
+            </li>
+            <li>
+                <img src="images/o-signo-dos-quatro.jpg" alt="Capa do livro: O Signo dos Quatro de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>O Signo dos Quatro</b>
+                </font>
+            </li>
+            <li>
+                <img src="images/o-cao-de-baskerville.jpg" alt="Capa do livro: O Cão de Baskerville de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>O Cão de Baskerville</b>
+                </font>
+            </li>
+            <li>
+                <img src="images/o-vale-do-medo.jpg" alt="Capa do livro: O Vale do Medo de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>O Vale do Medo</b>
+                </font>
+            </li>
+            <li>
+                <img src="images/as-aventuras-de-sherlock-holmes.jpg" alt="Capa do livro: As Aventuras de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>As Aventuras de Sherlock Holmes</b>
+                </font>
+            </li>
+            <li>
+                <img src="images/as-memorias-de-sherlock-holmes.jpg" alt="Capa do livro: As Memórias de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>As Memórias de Sherlock Holmes</b>
+                </font>
+            </li>
+            <li>
+                <img src="images/a-volta-de-sherlock-holmes.jpg" alt="Capa do livro: A Volta de Sherlock Holmes" align="center">
+                <font size="4">
+                    <b>A Volta de Sherlock Holmes</b>
+                </font>
+            </li>
+        </ul>
     </font>
-
-    <p>
-        <b>Objetivo:</b> Mostrar as resenhas dos principais livros de Sherlock Holmes.
-    </p>
-
-    <ul>
-        <li>Um Estudo em Vermelho</li>
-        <li>O Signo dos Quatro</li>
-        <li>O Cão de Baskerville</li>
-        <li>O Vale do Medo</li>
-        <li>As Aventuras de Sherlock Holmes</li>
-        <li>As Memórias de Sherlock Holmes</li>
-        <li>A Volta de Sherlock Holmes</li>
-    </ul>
 </body>
 </html>
